Make single component for spinner, start creating order component.

--- a/src/app/UI/sale/sale.component.html
+++ b/src/app/UI/sale/sale.component.html
@@ -2,4 +2,7 @@
   <span class="first-word">LEFT </span>
   <app-clock></app-clock>
   <span class="last-word">— 90% SALE</span>
+  <div class="icon-wrapper" (click)="onCloseAd()">
+    <img src="/assets/cancel_white.svg" alt="" class="close-icon">
+  </div>
 </div>
