--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -43,11 +43,7 @@
       </svg>
       </ng-container>
       <div class="loading-process" *ngIf="addToCartLoading">
-        <div class="spinner">
-          <div class="bounce1"></div>
-          <div class="bounce2"></div>
-          <div class="bounce3"></div>
-        </div>
+        <app-spinner></app-spinner>
       </div>
     </button>
     <button class="my-button cta heart">
