--- a/src/app/UI/sale/sale.component.scss
+++ b/src/app/UI/sale/sale.component.scss
@@ -19,4 +19,17 @@
   .last-word {
     margin-left: 10px;
   }
+  .icon-wrapper {
+    width: 15px;
+    height: 15px;
+    right: 27px;
+    top: 13px;
+    cursor: pointer;
+    position: absolute;
+    .close-icon {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
