--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -16,17 +16,17 @@
                    [cartItem]="cartItem"
                    [totalNumberOfProducts]="totalNumberOfProducts"
                    [isAddedToCart]="isAddedToCart"></app-cart-item>
-    <h5>Total amount: <strong>${{totalAmount}}</strong></h5>
-    <div class="button-wrapper">
-      <button class="my-button order-btn"><span>PLACE AN ORDER</span></button>
+    <div class="total-wrapper">
+      <h5>Total amount:</h5>
+      <strong>${{totalAmount}}</strong>
     </div>
+    <div class="button-wrapper">
+      <button class="my-button order-btn" (click)="onOpenOrder()"><span>PROCEED TO CHECKOUT</span></button>
+    </div>
+    <app-order *ngIf="orderIsPlaced"></app-order>
   </ng-container>
   <div class="loading-process-with-dim-background" *ngIf="addToCartLoading || decreaseCartLoading || deleteFromCartLoading">
-    <div class="spinner">
-      <div class="bounce1"></div>
-      <div class="bounce2"></div>
-      <div class="bounce3"></div>
-    </div>
+    <app-spinner></app-spinner>
   </div>
 </div>
 
