--- a/src/app/shop/wishlist/wishlist.component.html
+++ b/src/app/shop/wishlist/wishlist.component.html
@@ -18,11 +18,7 @@
     </app-wishlist-item>
   </ng-container>
   <div class="loading-process-with-dim-background" *ngIf="deleteFromWishlistLoading || addToCartLoading">
-    <div class="spinner">
-      <div class="bounce1"></div>
-      <div class="bounce2"></div>
-      <div class="bounce3"></div>
-    </div>
+    <app-spinner></app-spinner>
   </div>
 </div>
 
