Implement jspdf to order component.

--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -21,7 +21,7 @@
       <strong>${{totalAmount}}</strong>
     </div>
     <div class="button-wrapper">
-      <button class="my-button order-btn" (click)="onOpenOrder()"><span>PROCEED TO CHECKOUT</span></button>
+      <button class="my-button order-btn" (click)="onOpenOrder()"><span>Proceed to checkout</span></button>
     </div>
     <app-order *ngIf="orderIsPlaced"></app-order>
   </ng-container>
