--- a/src/app/shop/order/order.component.scss
+++ b/src/app/shop/order/order.component.scss
@@ -5,4 +5,8 @@
   background-color: $light_red_color;
   padding: 15px;
   border-radius: 10px;
+  .button-wrapper {
+    width: 100%;
+    text-align: center;
+  }
 }
