--- a/src/app/shop/cart/cart.component.scss
+++ b/src/app/shop/cart/cart.component.scss
@@ -31,6 +31,7 @@
     border-bottom: 3px solid black;
     padding-bottom: 5px;
     margin-bottom: 15px;
+    font-family: 'goudy_old_stylebold';
     .amount {
       width: 50%;
       text-align: left;
@@ -47,25 +48,30 @@
   }
   .total-wrapper {
     width: 100%;
+    margin-left: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     background: #F4F0ED;
     margin-bottom: 15px;
     border-radius: 10px;
-    padding: 10px 15px;
+    padding: 10px 10px 0 80px;
     h5 {
+      width: 25%;
+      text-align: center;
       font-family: 'goudy_old_stylebold';
       font-size: 22px;
       line-height: 22px;
     }
     strong {
-      margin-left: auto;
+      width: 25%;
+      text-align: right;
     }
   }
   .button-wrapper {
     width: 100%;
     text-align: center;
+    margin: 20px 0;
   }
 }
 .loading-animation {
