Make order effects.

--- a/src/app/shop/order-form/order-form.component.html
+++ b/src/app/shop/order-form/order-form.component.html
@@ -1,4 +1,4 @@
-<header class="form-header">
+<header class="form-header" id="formContainer">
   <div class="info">Enter your customer information</div>
 </header>
 <form #productForm class="form" id="form">
