--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -56,7 +56,7 @@
       }
     }
   }
-  .save-wrapper {
+  .button-wrapper {
     text-align: center;
     flex-basis: 100%;
     margin-top: 30px;
