--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -56,7 +56,7 @@
     </table>
   </div>
   <div class="button-wrapper">
-    <button class="my-button" (click)="downloadPdf()"><span>Download PDF</span></button>
+    <app-button [text]="'Download PDF'" (onClick)="downloadPdf()"></app-button>
   </div>
 </div>
 <div class="loader-wrapper">
