--- a/src/app/UI/button/button.component.html
+++ b/src/app/UI/button/button.component.html
@@ -1,3 +1,3 @@
-<p>
-  button works!
-</p>
+<button class="my-button" (click)="onClickButton()" [disabled]="disabled">
+  <span>{{text}}</span>
+</button>
