--- a/src/app/shop/order/orders-list/orders-list.component.scss
+++ b/src/app/shop/order/orders-list/orders-list.component.scss
@@ -27,13 +27,12 @@
     }
   }
   .orders-header {
-    width: calc(100% - 15px);
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     border-bottom: 3px solid black;
-    padding-bottom: 5px;
-    padding-left: 15px;
+    padding: 0 15px 5px 15px;
     margin-bottom: 15px;
     div {
       flex: 1;
