--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -59,6 +59,6 @@
     </button>
   </div>
   </ng-container>
-  <div class="lds-ripple" *ngIf="productDetailsLoading"><div></div><div></div></div>
+  <app-ripple *ngIf="productDetailsLoading"></app-ripple>
 </div>
 
