--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -4,7 +4,7 @@
   align-items: flex-end;
   padding-bottom: 20px;
   margin-top: 20px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   height: 100px;
   font-weight: 600;
   letter-spacing: 1px;
