--- a/src/app/shop/products/filter/filter.component.scss
+++ b/src/app/shop/products/filter/filter.component.scss
@@ -14,4 +14,32 @@
       text-transform: capitalize;
     }
   }
+  .container-search {
+    height: 30px;
+    display: flex;
+    position: relative;
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    &:focus-within {
+      box-shadow: 0 0 5px rgba(0,0,0, .5);
+    }
+    .search-input {
+      width: 100%;
+      height: 100%;
+      border: 2px solid black;
+      font-size: 16px;
+      padding-left: 10px;
+      border-radius: 5px;
+    }
+    .search-icon {
+      cursor: pointer;
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 17px;
+      height: 20px;
+    }
+  }
 }
