--- a/src/app/shop/products/product-details/product-details.component.scss
+++ b/src/app/shop/products/product-details/product-details.component.scss
@@ -21,6 +21,10 @@
   margin-top: 80px;
   margin-bottom: 80px;
   font-size: 16px;
+  .loading-wrapper {
+    width: 100%;
+    text-align: center;
+  }
   .title {
     font-weight: 600;
   }
