--- a/src/app/shop/products/filter/filter.component.scss
+++ b/src/app/shop/products/filter/filter.component.scss
@@ -2,6 +2,7 @@
   width: 200px;
   font-family: 'goudy_old_stylebold_italic';
   margin-right: 50px;
+  margin-bottom: 70px;
   .filter-title {
     border-bottom: 2px solid black;
   }
@@ -21,6 +22,7 @@
     width: 100%;
     border-radius: 5px;
     margin-bottom: 30px;
+    margin-top: 10px;
     &:focus-within {
       box-shadow: 0 0 5px rgba(0,0,0, .5);
     }
