--- a/src/app/shop/products/filter/filter.component.scss
+++ b/src/app/shop/products/filter/filter.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../variables.scss';
+
 .filters {
   width: 200px;
   font-family: 'goudy_old_stylebold_italic';
@@ -13,6 +15,9 @@
       text-decoration: none;
       color: black;
       text-transform: capitalize;
+      &.active {
+        color: $red_color;
+      }
     }
   }
   .container-search {
