--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="content-wrapper">
     <div class="brand">{{product.brand}}</div>
-    <div class="material"><span class="title">Category:</span> {{product.category_id.category}}</div>
+    <div class="material"><span class="title">Category:</span> {{product.category_id.name}}</div>
     <div class="description">
       <span class="title">Description: </span><span [innerHTML]="product.description"></span>
     </div>
