--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -7,7 +7,7 @@
         <li [routerLink]="['./']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
           <span>DISCOVER</span>
         </li>
-        <li [routerLink]="['create-post']" routerLinkActive="active-link" *ngIf="myRole !== 'admin'">
+        <li [routerLink]="['post/create']" routerLinkActive="active-link" *ngIf="myRole !== 'admin'">
           <span>CREATE POST</span>
         </li>
       </ul>
