Implement fetch subcategories effect.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li class="nav-item">
       <a class="nav-link nav-link-profile"  routerLink="/">
-        <span class="username">Categories{{list}}</span>
+        <span class="username">Categories</span>
       </a>
     </li>
   </ul>
