--- a/src/app/shop/products/edit-product/edit-product.component.scss
+++ b/src/app/shop/products/edit-product/edit-product.component.scss
@@ -87,6 +87,7 @@ form {
         height: 100px;
         width: 100px;
         cursor: pointer;
+        object-fit: cover;
       }
       .highlight-main-img {
         outline: 2px solid rgba(121,87,213,1);
