--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 @import '../node_modules/quill/dist/quill.core.css';
 @import '../node_modules/quill/dist/quill.bubble.css';
 @import '../node_modules/quill/dist/quill.snow.css';
+@import '../node_modules/angular-tree-component/dist/angular-tree-component.css';
