--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
@@ -6,7 +6,7 @@
   <div class="content-box">
     <div class="block">
       <div class="title brand">{{wishlistItem.brand}}</div>
-      <div><span class="title">Category:</span> {{wishlistItem.category}}</div>
+      <div class="subcategory">{{wishlistItem.category}}, {{wishlistItem.subcategory}}</div>
     </div>
     <div class="block">
       <div class="price-wrapper">
