--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
@@ -29,6 +29,9 @@
   .title {
     font-weight: 600;
   }
+  .subcategory {
+    font-size: 14px;
+  }
   .content-box {
     display: flex;
     width: calc(100% - 80px);
