Make actions, effects and reducer for categories.

--- a/src/app/blog/edit-post/edit-post.component.scss
+++ b/src/app/blog/edit-post/edit-post.component.scss
@@ -27,6 +27,9 @@ form {
     }
   }
 }
+/deep/ .modal.show .modal-sm {
+  top: 70px;
+}
 /deep/ .confirm-body {
   .cta {
     display: inline-block;
